# pythonanywhere-mcp-server

./: .dxtignore  .gitignore  .mcpbignore  LICENSE  README.md  manifest.json  pyproject.toml  pythonanywhere_mcp_server.py
.github/workflows/: release.yml  test.yml
src/pythonanywhere_mcp_server/: __main__.py  server.py
src/pythonanywhere_mcp_server/tools/: file.py  schedule.py  webapp.py  website.py
tests/: conftest.py  test_file_tools.py  test_schedule_tools.py  test_server.py  test_webapp_tools.py  test_website_tools.py
tools/: file_tools.py  schedule_tools.py  website_tools.py
